--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/highpeaks/auras#readme",
   "dependencies": {
+    "density-clustering": "^1.3.0",
     "express": "^4.16.3"
   }
 }
